# Kick-Bot

./: .gitignore  README.md  configure.py  pyproject.toml  requirements.txt  run_bot.py  web_dashboard.py
archive/flat_scripts_pre_package/: ai_responder.py  configure_bot.py  kick_channel_lookup.py  kick_chat_sender.py  kick_oauth_login.py  kick_pusher_listener.py  login_kick_oauth.ps1  login_kick_oauth.sh  migrate_bot_config.py  setup_ollama_model.ps1  test_ai_response.py
backup_before_sandbox_merge/src/kick_bot/: vision_analyzer.py
config/: bot_config.example.json  bot_config.json
docs/: architecture.md  commands.md  web-dashboard.md
src/kick_bot/: __init__.py  add_channel.py  ai_responder.py  channel_lookup.py  channel_resolver.py  chat_sender.py  config_tool.py  env_loader.py  listener.py  listener_types.py  migrate_config.py  oauth_login.py  response_coordinator.py  speech_listener.py  stream_context.py  test_ai_response.py  trigger_suggester.py  vision_listener.py  web_app.py  webhook_listener.py
src/kick_bot/web/: index.html
src/kick_local_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/: add_kick_channel.ps1  add_kick_channel.sh  login_kick_oauth.ps1  login_kick_oauth.sh  setup_ollama_model.ps1
